syntax = "proto3";

package stats.service.collector;

option java_multiple_files = true;
option java_package = "ru.practicum.stats.proto";
option java_outer_classname = "UserActionProtoOuter";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service UserActionController {
  rpc CollectUserAction(UserActionProto) returns (google.protobuf.Empty);
}
